[gd_scene load_steps=10 format=3 uid="uid://be5dncu62dp1f"]

[ext_resource type="Script" uid="uid://d0u1bi12hcgy8" path="res://entities/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bfoiee0v13ijs" path="res://gfx/2026-01-01 hero axe 16x16 gbc.png" id="2_onrkg"]
[ext_resource type="Script" uid="uid://ddb1b2lm680lt" path="res://components/axe_handler.gd" id="3_hqtel"]
[ext_resource type="PackedScene" uid="uid://lb4mlj0v4dmr" path="res://components/axe_swing.tscn" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://ewl42ufpcjrp" path="res://entities/player_camera.gd" id="5_qsoyl"]
[ext_resource type="Script" uid="uid://do6hwn4po5u1h" path="res://components/health.gd" id="6_6nm46"]
[ext_resource type="Script" uid="uid://cmkbp8fuq0kkh" path="res://components/hurtbox.gd" id="6_i623q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(11, 15.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_i3pqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_onrkg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_i3pqv")

[node name="AxeHandler" type="Node2D" parent="."]
script = ExtResource("3_hqtel")

[node name="AxeSwing" parent="AxeHandler" instance=ExtResource("3_i3pqv")]
visible = false
position = Vector2(0, 16)

[node name="SwingingTimer" type="Timer" parent="AxeHandler"]
wait_time = 0.2
one_shot = true

[node name="PlayerCamera" type="Camera2D" parent="."]
script = ExtResource("5_qsoyl")

[node name="RoomDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector"]
shape = SubResource("RectangleShape2D_onrkg")

[node name="RoomTransitionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Health" type="Node" parent="."]
script = ExtResource("6_6nm46")
max_value = 10

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health", "iframes")]
collision_layer = 2
collision_mask = 2
script = ExtResource("6_i623q")
health = NodePath("../Health")
iframes = NodePath("../IFrames")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_onrkg")

[node name="IFrames" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="swing_axe" from="." to="AxeHandler" method="_on_player_swing_axe"]
[connection signal="timeout" from="AxeHandler/SwingingTimer" to="." method="_on_swinging_timer_timeout"]
[connection signal="timeout" from="AxeHandler/SwingingTimer" to="AxeHandler" method="_on_swinging_timer_timeout"]
[connection signal="area_entered" from="RoomDetector" to="." method="_on_room_detector_area_entered"]
[connection signal="area_shape_entered" from="RoomDetector" to="." method="_on_room_detector_area_shape_entered"]
[connection signal="timeout" from="RoomTransitionTimer" to="." method="_on_room_transition_timer_timeout"]
